// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormTextAreaComponent Snapshots Should render 1`] = `
<yoo-form-text-area
  class="hydrated"
  data-yoo-form-text-area-host=""
>
  
  <textarea
    data-yoo-form-text-area=""
  />
</yoo-form-text-area>
`;

exports[`FormTextAreaComponent Snapshots Should render with a placeholder 1`] = `
<yoo-form-text-area
  class="hydrated"
  data-yoo-form-text-area-host=""
  placeholder="placeholder"
>
  
  <textarea
    data-yoo-form-text-area=""
    placeholder="placeholder"
  />
</yoo-form-text-area>
`;

exports[`FormTextAreaComponent Snapshots Should render with text 1`] = `
<yoo-form-text-area
  class="hydrated"
  data-yoo-form-text-area-host=""
  value="text"
>
  
  <textarea
    data-yoo-form-text-area=""
  />
</yoo-form-text-area>
`;
